remove empty link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>Projects</h2>
     <div class="project">
       <h3>Project One</h3>
-      <p>This is my first project - Creating my portfolio <a href="#"></a></p>
+      <p>This is my first project - Creating my portfolio</p>
     </div>
      </section>
 
