--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="Daniel.Olson004@Gmail.com">Daniel.Olson004@Gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/Daniel.Olson004" target="_blank">Daniel.Olson004</a></p>
+    <p>GitHub: <a href="https://github.com/DanielOlson004" target="_blank">Daniel.Olson004</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/daniel-olson1/" target="_blank">Daniel-Olson1</a></p>
   </section>
 </body>
